--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ before_build:
   - hererocks here --%LUA% -rlatest
   - call here\bin\activate
   - luarocks install luacov-coveralls
+  - luarocks install bit32
 
 build_script:
   - luarocks make
